--- a/src/NSExt/NSExt.csproj
+++ b/src/NSExt/NSExt.csproj
@@ -3,8 +3,8 @@
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>disable</Nullable>
-        <LangVersion>preview</LangVersion>
+        <VersionPrefix>1.0.0</VersionPrefix>
+        <RepositoryUrl>https://github.com/nsnail/ns-ext.git</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
