--- a/src/NSExt/NSExt.csproj
+++ b/src/NSExt/NSExt.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
-        <VersionPrefix>1.0.3</VersionPrefix>
+        <Version>1.0.4</Version>
     </PropertyGroup>
 
     <ItemGroup>
