--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,8 +1,9 @@
 <Project>
     <PropertyGroup>
-        <BaseOutputPath>../build/temp/bin</BaseOutputPath>
-        <BaseIntermediateOutputPath>../build/temp/obj</BaseIntermediateOutputPath>
-        <MSBuildProjectExtensionsPath>../build/temp/obj</MSBuildProjectExtensionsPath>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <BaseOutputPath>../build/$(MSBuildProjectName)/bin</BaseOutputPath>
+        <BaseIntermediateOutputPath>../build/$(MSBuildProjectName)/obj</BaseIntermediateOutputPath>
+        <MSBuildProjectExtensionsPath>$(BaseIntermediateOutputPath)</MSBuildProjectExtensionsPath>
         <Authors>nsnail</Authors>
         <Product>NSExt</Product>
         <Copyright>© 2006-2022 nsnail</Copyright>
@@ -11,11 +12,9 @@
         <EmbedUntrackedSource>true</EmbedUntrackedSource>
         <EmbedAllSources>true</EmbedAllSources>
         <RepositoryType>Git</RepositoryType>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
         <PackageProjectUrl>https://github.com/nsnail/ns-ext.git</PackageProjectUrl>
-        <PackageOutputPath>../build/nupkgs</PackageOutputPath>
     </PropertyGroup>
 </Project>
