--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ x86/
 bld/
 [Bb]in/
 [Oo]bj/
-[Ll]og/
+# [Ll]og/
 [Ll]ogs/
 
 # Visual Studio 2015/2017 cache/options directory
@@ -399,6 +399,6 @@ FodyWeavers.xsd
 .idea/
 
 # User Define
-build/
+dist/
 nuget.config
 *.[Dd]esigner.cs
