--- a/src/NSExt.Tests/NSExt.Tests.csproj
+++ b/src/NSExt.Tests/NSExt.Tests.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
-        <PackageReference Include="xunit" Version="2.4.2" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0"/>
+        <PackageReference Include="xunit" Version="2.5.1-pre.20"/>
     </ItemGroup>
     <ItemGroup>
-        <ProjectReference Include="..\NSExt\NSExt.csproj" />
+        <ProjectReference Include="..\NSExt\NSExt.csproj"/>
     </ItemGroup>
 </Project>
