--- a/src/NSExt/NSExt.csproj
+++ b/src/NSExt/NSExt.csproj
@@ -1,5 +1,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
-    <Import Project="../../CodeQuality.props" />
+    <Import Project="../../CodeQuality.props"/>
     <PropertyGroup>
         <AssemblyOriginatorKeyFile>../../key.snk</AssemblyOriginatorKeyFile>
         <DelaySign>false</DelaySign>
@@ -23,13 +23,13 @@
         <Title>$(AssemblyName)</Title>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
-        <PackageReference Include="MinVer" Version="4.3.0">
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0"/>
+        <PackageReference Include="MinVer" Version="5.0.0-alpha.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
     </ItemGroup>
     <ItemGroup>
-        <None Include="../../logo.png" Pack="true" PackagePath="" />
+        <None Include="../../logo.png" Pack="true" PackagePath=""/>
     </ItemGroup>
 </Project>
