--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,8 +6,21 @@
         <BaseIntermediateOutputPath>$(SolutionDir)/dist/$(MSBuildProjectName)/obj</BaseIntermediateOutputPath>
         <BaseOutputPath>$(SolutionDir)/dist/$(MSBuildProjectName)/bin</BaseOutputPath>
         <Copyright>© 2006-2023 nsnail</Copyright>
+        <Description>A .NET extension function library</Description>
         <EnableBaseIntermediateOutputPathMismatchWarning>false</EnableBaseIntermediateOutputPathMismatchWarning>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <ImplicitUsings>enable</ImplicitUsings>
-        <TargetFramework>net7.0</TargetFramework>
+        <MinVerDefaultPreReleaseIdentifiers>beta</MinVerDefaultPreReleaseIdentifiers>
+        <Product>NSExt</Product>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/nsnail/NSExt.git</RepositoryUrl>
+        <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
+        <Title>$(AssemblyName)</Title>
     </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="MinVer" Version="5.0.0-alpha.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
 </Project>
