--- a/src/NSExt.Tests/NSExt.Tests.csproj
+++ b/src/NSExt.Tests/NSExt.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0"/>
-        <PackageReference Include="xunit" Version="2.5.1-pre.20"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0-preview-23424-02"/>
+        <PackageReference Include="xunit" Version="2.5.2-pre.2"/>
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\NSExt\NSExt.csproj"/>
