--- a/.tgitconfig
+++ b/.tgitconfig
@@ -1,4 +1,4 @@
 [hook "startcommit"]
-	cmdline = code-format.cmd
-	wait = true
-	show = true
+    cmdline = dot.clean.cmd
+    wait = true
+    show = true
