--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,7 +1,26 @@
 <Project>
     <PropertyGroup>
-        <BaseOutputPath>../build/temp/bin</BaseOutputPath>
-        <BaseIntermediateOutputPath>../build/temp/obj</BaseIntermediateOutputPath>
-        <MSBuildProjectExtensionsPath>../build/temp/obj</MSBuildProjectExtensionsPath>
+        <!--        $(XXX) 定义有顺序 排序请注意-->
+        <SolutionDir>$(MSBuildThisFileDirectory)</SolutionDir>
+        <Authors>nsnail</Authors>
+        <BaseIntermediateOutputPath>$(SolutionDir)/dist/$(MSBuildProjectName)/obj</BaseIntermediateOutputPath>
+        <BaseOutputPath>$(SolutionDir)/dist/$(MSBuildProjectName)/bin</BaseOutputPath>
+        <Copyright>© 2006-2023 nsnail</Copyright>
+        <Description>A .NET extension function library</Description>
+        <EnableBaseIntermediateOutputPathMismatchWarning>false</EnableBaseIntermediateOutputPathMismatchWarning>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <MinVerDefaultPreReleaseIdentifiers>beta</MinVerDefaultPreReleaseIdentifiers>
+        <Product>NSExt</Product>
+        <RepositoryType>git</RepositoryType>
+        <RepositoryUrl>https://github.com/nsnail/NSExt.git</RepositoryUrl>
+        <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
+        <Title>$(AssemblyName)</Title>
     </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="MinVer" Version="5.0.0-alpha.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
 </Project>
