--- a/src/NSExt/NSExt.csproj
+++ b/src/NSExt/NSExt.csproj
@@ -1,14 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFrameworks>net6.0;net7.0</TargetFrameworks>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Version>1.0.6</Version>
-    </PropertyGroup>
-
+    <Import Project="../../code.quality.props"/>
+    <Import Project="../../packable.props"/>
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0"/>
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0-rc.1.23419.4"/>
     </ItemGroup>
-
-
+    <ItemGroup>
+        <None Include="../../logo.png" Pack="true" PackagePath=""/>
+    </ItemGroup>
 </Project>
