--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
       - v*
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
@@ -20,11 +20,8 @@ jobs:
           key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
           restore-keys: ${{ runner.os }}-nuget
       - working-directory: ./src/backend/NSExt
-        run: dotnet publish NSExt.csproj -f net8.0-windows -r win-x64 -c Release
-      - working-directory: ./src/backend/NSExt
-        run: dotnet publish NSExt.csproj -f net8.0 -r linux-x64 -c Release
+        run: dotnet build -c Release
       - uses: actions/create-release@v1
-        id: create_release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
@@ -32,19 +29,5 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
-      - uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/backend/NSExt/bin/Release/net8.0-windows/win-x64/publish/dot.exe
-          asset_name: dot-win-x64.exe
-          asset_content_type: application/octet-stream
-      - uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/backend/NSExt/bin/Release/net8.0/linux-x64/publish/dot
-          asset_name: dot-linux-x64
-          asset_content_type: application/octet-stream
+      - run: dotnet nuget push ./dist/backend/NSExt/bin/Release/NSExt.${{ github.ref }}.nupkg --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
+      - run: dotnet nuget push ./dist/backend/NSExt/bin/Release/NSExt.${{ github.ref }}.snupkg --skip-duplicate --api-key ${{ secrets.NUGET_TOKEN }} --source https://api.nuget.org/v3/index.json
