--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -22,7 +22,7 @@
         <RepositoryType>git</RepositoryType>
         <RepositoryUrl>https://github.com/nsnail/NSExt.git</RepositoryUrl>
         <RootNamespace>NSExt</RootNamespace>
-        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+        <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
         <Title>$(AssemblyName)</Title>
     </PropertyGroup>
     <ItemGroup>
